--- a/README.Rmd
+++ b/README.Rmd
@@ -17,9 +17,6 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 [![CRAN status](https://www.r-pkg.org/badges/version/tune)](https://CRAN.R-project.org/package=tune)
-[![Azure pipelines build status](https://img.shields.io/azure-devops/build/topepo/tune/2)](https://dev.azure.com/topepo/tune/_build/latest?definitionId=1&branchName=master)
-[![Azure pipelines test status](https://img.shields.io/azure-devops/tests/topepo/tune/2?color=brightgreen&compact_message)](https://dev.azure.com/topepo/tune/_build/latest?definitionId=1&branchName=master)
-[![Azure pipelines coverage status](https://img.shields.io/azure-devops/coverage/topepo/tune/2)](https://dev.azure.com/topepo/tune/_build/latest?definitionId=1&branchName=master)
 <!-- badges: end -->
 
 The goal of tune is to facilitate the tuning of hyper-parameters the tidymodels packages. It replies heavily on `recipes`, `parsnip`, and `dials`. 
@@ -34,13 +31,13 @@ devtools::install_github("tidymodels/tune")
 
 ## Examples
 
-There are a few package vignettes, the first being the _Getting Started_ document. Other examples resources:
+There are a few package vignettes, the first being the [_Getting Started_](https://tidymodels.github.io/tune/articles/getting_started.html) document. Other examples resources:
 
- - basic grid search
- - Bayesian optimization example
- - an advanced text mining example
- - notes on optimizations and parallel processing
- - details on acquisition function for scoring parameter combinations
+ - [basic grid search](https://tidymodels.github.io/tune/articles/grid.html)
+ - [Bayesian optimization example](https://tidymodels.github.io/tune/articles/extras/Classification.html)
+ - [an advanced text mining example](https://tidymodels.github.io/tune/articles/extras/text_analysis.html)
+ - [notes on optimizations and parallel processing](https://tidymodels.github.io/tune/articles/extras/optimizations.html)
+ - [details on acquisition function for scoring parameter combinations](https://tidymodels.github.io/tune/articles/acquisition_functions.html)
  
 ## Important Notes
 
