--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,9 @@ knitr::opts_chunk$set(
 [![CRAN status](https://www.r-pkg.org/badges/version/tune)](https://CRAN.R-project.org/package=tune)
 [![Travis build status](https://travis-ci.org/tidymodels/tune.svg?branch=master)](https://travis-ci.org/tidymodels/tune)
 [![Codecov test coverage](https://codecov.io/gh/tidymodels/tune/branch/master/graph/badge.svg)](https://codecov.io/gh/tidymodels/tune?branch=master)
+[![Azure pipelines build status](https://img.shields.io/azure-devops/build/tidymodels/tune/2)](https://dev.azure.com/tidymodels/tune/_build/latest?definitionId=1&branchName=master)
+[![Azure pipelines test status](https://img.shields.io/azure-devops/tests/tidymodels/tune/2?color=brightgreen&compact_message)](https://dev.azure.com/tidymodels/tune/_build/latest?definitionId=1&branchName=master)
+[![Azure pipelines coverage status](https://img.shields.io/azure-devops/coverage/tidymodels/tune/2)](https://dev.azure.com/tidymodels/tune/_build/latest?definitionId=1&branchName=master)
 <!-- badges: end -->
 
 The goal of tune is to facilitate the tuning of hyper-parameters the tidymodels packages. It replies heavily on `recipes`, `parsnip`, and `dials`. 
